Make some changes

--- a/index.html
+++ b/index.html
@@ -9,11 +9,10 @@
 </head>
 
 <body>
-<ul class="skip-links">
-  <li><a href="main">Jump to main content</a></li>
-  <li><a href="nav">Jump to navigation</a></li>
-</ul>
-
+  <ul class="skip-links">
+    <li><a href="#main">Jump to main content</a></li>
+    <li><a href="#nav">Jump to navigation</a></li>
+  </ul>
 
   <header role="banner">
     <h1>Pangolin</h1>
@@ -48,7 +47,7 @@
     </section>
     <section id="behaviour" tabindex="0">
       <h2>Behaviour</h2>
-        <a href="https://en.wikipedia.org/wiki/Pangolin#Behavior" aria-label="Read more about Pangolin behaviour">Read more</a>
+      <a href="https://en.wikipedia.org/wiki/Pangolin#Behavior" aria-label="Read more about Pangolin behaviour">Read more</a>
     </section>
 
     <section id="conservation" tabindex="0">
